--- a/packages/cargo-stylus/multi-sig/Cargo.toml
+++ b/packages/cargo-stylus/multi-sig/Cargo.toml
@@ -9,6 +9,7 @@ alloy-sol-types = "=0.7.6"
 mini-alloc = "0.4.2"
 stylus-sdk = "0.6.0"
 hex = "0.4.3"
+stylus-cache-sdk = "0.1.0"
 
 [features]
 export-abi = ["stylus-sdk/export-abi"]
